test/classes/deitz/test_union4.good
x: (-1)
ERROR: Union type error (test_union4.chpl:16)
